Upgrade Jsch, add more logs on tasks